--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -191,7 +191,9 @@ i.fa.fa-question-circle, i.fa.fa-cog {
 .right-menu {
     margin: 0 !important;
 }
-
+.navbar-collapse .navbar-nav>li>a {
+    color: #bbb;
+}
 /******************* SIDEBAR *********************/
 
 .nav-sidebar > li > a {
@@ -490,27 +492,48 @@ p.dashboard-welcome {
     font-size: 18px;
     font-weight: 300;
 }
+.details label {
+    font-size: 14px;
+}
 .details h2 {
     margin-bottom: 50px;
     margin-right: 30px;
 }
 .details .detail-label {
     font-weight: 700;
+}
+.details .detail-info {
     margin-bottom: 10px;
 }
-.details button {
+.details .action-buttons {
+    display: inline-block;
+}
+.details .action-buttons button {
     margin-left: 10px;
     margin-bottom: 12px;
 }
-button .fa {
+.details .action-buttons button .fa {
     font-size: 16px;
     margin-right: 7px;
 }
-@media screen and (max-width: 540px) {
-    .details .editCourseButton span, .details .deleteCourseButton span {
+.details .modal-content, .courses .modal-content {
+    font-weight: 500;
+}
+.details .modal-title {
+    font-weight: 700;
+}
+@media screen and (max-width: 990px) {
+    .details h2 {
+        margin-bottom: 10px;
+    }
+    .details .action-buttons button {
+        margin: 0;
+        margin-bottom: 15px;
+    }
+    .details .action-buttons button span, .details .action-buttons button span {
         display: none;
     }
-    .details .editCourseButton .fa, .details .deleteCourseButton .fa {
+    .details .action-buttons button .fa {
         margin-right: 0;
     }
 }
