--- a/public/project/client/views/profile/profile.view.html
+++ b/public/project/client/views/profile/profile.view.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-6 col-md-offset-2 main">
             <h1>Profile</h1>
-            {{currentUser}}
+            <!-- {{currentUser}} -->
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
             <div ng-show="error" class="alert alert-danger" role="alert">{{error}}</div>
