start working on favoriting courses

--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -4,7 +4,11 @@
             <h2>{{model.data.subject}} {{model.data.number}}: {{model.data.title}}</h2>
 
             <div class="action-buttons">
-                <button ng-click="model.saveCourse(course)" class="btn btn-default"><i class="fa fa-star-o"></i><span>Save</span></button>
+                <button ng-click="model.favoriteCourse(course)" class="btn btn-default">
+                    <span ng-show="model.course.likes.indexOf(currentUser._id) > -1" class="fa fa-star"></span>
+                    <span ng-show="!model.course || !model.course.likes || model.course.likes.indexOf(currentUser._id) == -1" class="fa fa-star-o"></span>
+                    <span>Save</span>
+                </button>
 
                 <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default editCourseButton" data-toggle="modal" data-target="#editCourse"><i class="fa fa-pencil"></i><span>Edit</span></button>
 
