--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -79,8 +79,9 @@
                             <a ng-click="model.inProgress(course)">
                                 <i class="fa fa-book"></i>
                             </a> -->
-                            <a ng-click="model.save(course)">
-                                <i class="fa fa-star-o"></i>
+                            <a ng-click="model.favoriteCourse(course)">
+                                <span ng-show="model.course.likes.indexOf(currentUser._id) > -1" class="fa fa-star"></span>
+                                <span ng-show="!model.course || !model.course.likes || model.course.likes.indexOf(currentUser._id) == -1" class="fa fa-star-o"></span>
                             </a>
                             <!-- <a ng-show="currentUser.roles.indexOf('admin') >= 0" data-toggle="modal" data-target="#editCourse">
                                 <i class="fa fa-pencil-square-o"></i>
