likes almost work

--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -15,6 +15,8 @@
                 </div>
             </div> -->
 
+            <!-- {{currentUser.likesCourses}} -->
+
             <!-- <span>Ordered By: {{orderByField}}, Reverse Sort: {{reverseSort}}</span> -->
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
@@ -80,9 +82,12 @@
                                 <i class="fa fa-book"></i>
                             </a> -->
                             <a ng-click="model.favoriteCourse(course)">
-                                <span ng-show="model.course.likes.indexOf(currentUser._id) > -1" class="fa fa-star"></span>
-                                <span ng-show="!model.course || !model.course.likes || model.course.likes.indexOf(currentUser._id) == -1" class="fa fa-star-o"></span>
+                                <!-- <span ng-show="model.course.likes.indexOf(currentUser._id) > -1" class="fa fa-star"></span> -->
+                                <span ng-show="model.like" class="fa fa-star"></span>
+                                <!-- <span ng-show="!model.course || !model.course.likes || model.course.likes.indexOf(currentUser._id) == -1" class="fa fa-star-o"></span> -->
+                                <span ng-show="!model.like" class="fa fa-star-o"></span>
                             </a>
+
                             <!-- <a ng-show="currentUser.roles.indexOf('admin') >= 0" data-toggle="modal" data-target="#editCourse">
                                 <i class="fa fa-pencil-square-o"></i>
                             </a>
