--- a/public/project/client/views/saved/saved.view.html
+++ b/public/project/client/views/saved/saved.view.html
@@ -2,11 +2,10 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main saved">
             <h1>Saved Courses</h1>
-
+            {{currentUser}}
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
                     <tr>
-                        <!-- <th>ID</th> -->
                         <th>
                             <a ng-click="orderByField='subject'; reverseSort = !reverseSort">Subject
                                 <span ng-show="orderByField == 'subject'">
@@ -34,8 +33,8 @@
                         <th>Action</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr ng-repeat="course in courses|orderBy:orderByField:reverseSort">
+                <tbody ng-if="model.user.likesCourses.length">
+                    <tr ng-repeat="course in model.user.likesCourses|orderBy:orderByField:reverseSort">
                         <td>
                             <a href="#">{{course.subject}}</a>
                         </td>
@@ -46,17 +45,8 @@
                             <a href="#">{{course.title}}</a>
                         </td>
                         <td class="table-nowrap">
-                            <a ng-click="addCourseToSchedule(course)">
-                                <i class="fa fa-calendar-plus-o"></i>
-                            </a>
-                            <a ng-click="saveCourse(course)">
+                            <a ng-click="favorite(course)">
                                 <i class="fa fa-star"></i>
-                            </a>
-                            <a ng-click="selectCourse($index)" ng-show="currentUser.roles.indexOf('admin') >= 0">
-                                <i class="fa fa-pencil-square-o"></i>
-                            </a>
-                            <a ng-click="deleteCourse($index)" ng-show="currentUser.roles.indexOf('admin') >= 0">
-                                <i class="fa fa-trash-o"></i>
                             </a>
                         </td>
                     </tr>
