--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -89,19 +89,8 @@
                                 <!-- <span ng-show="!model.like" class="fa fa-star-o"></span> -->
                             </a>
 
-                            <a ng-click="model.favoriteCourse(course)">
+                            <!-- <a ng-click="model.unfavoriteCourse(course)">
                                 <span ng-show="course.likes.indexOf(currentUser._id) > -1"><i class="fa fa-star"></i></span>
-                                <span ng-show="course.likes.indexOf(currentUser._id) == -1"><i class="fa fa-star-o"></i></span>
-                                <!-- <span ng-show="!course.likes || course.likes.indexOf(currentUser._id) == -1"><i class="fa fa-star-o"></i></span> -->
-                                <!-- <span ng-show="model.like" class="fa fa-star"></span> -->
-                                <!-- <span ng-show="!model.like" class="fa fa-star-o"></span> -->
-                            </a>
-
-                            <!-- <a ng-show="currentUser.roles.indexOf('admin') >= 0" data-toggle="modal" data-target="#editCourse">
-                                <i class="fa fa-pencil-square-o"></i>
-                            </a>
-                            <a ng-click="model.deleteCourse(course)" ng-show="currentUser.roles.indexOf('admin') >= 0">
-                                <i class="fa fa-trash-o"></i>
                             </a> -->
                         </td>
                     </tr>
