--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -5,8 +5,8 @@
 
             <div class="action-buttons">
                 <button ng-click="model.favoriteCourse(model.data)" class="btn btn-default">
-                    <span ng-show="model.data.likes.indexOf(currentUser._id) > -1"><i class="fa fa-star"></i>Saved</span>
-                    <span ng-show="!model.data.likes || model.data.likes.indexOf(currentUser._id) == -1"><i class="fa fa-star-o"></i>Save</span>
+                    <span ng-show="model.data.likes.indexOf(currentUser._id) > -1"><i class="fa fa-star"></i>Favorited</span>
+                    <span ng-show="!model.data.likes || model.data.likes.indexOf(currentUser._id) == -1"><i class="fa fa-star-o"></i>Favorite</span>
                     <!-- <span ng-show="model.like" class="fa fa-star"></span> -->
                     <!-- <span ng-show="!model.like" class="fa fa-star-o"></span> -->
                     <!-- <span>Save</span> -->
@@ -18,8 +18,7 @@
             </div>
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
-
-            {{currentUser}}
+            <!-- {{currentUser}} -->
 
             <div class="row">
                 <div class="col-md-2 detail-label">Course ID:</div>
@@ -61,21 +60,18 @@
                 <div class="col-md-2 detail-label">Type:</div>
                 <div class="col-md-10 detail-info">{{model.data.type}}</div>
             </div>
-
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-2 detail-label">Users Who Like This Course:</div>
                 <div class="col-md-10 detail-info">{{model.data.likes}}</div>
-            </div>
-
+            </div> -->
             <br>
-            <!-- <div ng-if="model.course.userLikes"> -->
-            <div>
+            <div ng-if="model.data.likes">
                 <p class="detail-label">Other users that have favorited this course:</p>
                 <ul>
-                    <li ng-repeat="user in model.data.userLikes">
-                        <a href="#/profile/{{user.username}}">
-                {{user.username}}
-            </a>
+                    <li ng-repeat="user in model.data.likes">
+                        <a href="#/profile/{{data.username}}">
+                            {{user}}
+                        </a>
                     </li>
                 </ul>
             </div>
