--- a/public/project/client/views/dashboard/dashboard.view.html
+++ b/public/project/client/views/dashboard/dashboard.view.html
@@ -11,28 +11,53 @@
     </div> -->
 
     <div class="row">
-        <div class="col-lg-8 col-md-8">
+        <div class="col-sm-8 col-md-8">
             <div class="panel panel-default schedule-panel">
-                <div class="panel-heading"><i class="fa fa-graduation-cap"></i>&nbsp;&nbsp;&nbsp;Completed Courses</span></div>
+                <div class="panel-body">
+                    <p>Welcome to CourseSource! Browsing through Northeastern's many courses has never been easier! With CourseSource, you can easily find information on courses that you are going to or want to take. For easy browsing, you can even favorite courses so you can conveniently come back to read about them later.</p>
+                    <p>Navigate through CourseSource by clicking the links on the left sidebar. Students can view courses, favorite courses, and view the details and prereqs for each course. Admins and faculty can add, update, and delete users as well as view and favorite courses.</p>
+                    <!-- <p>CourseSource is your #1 web resource for browsing, searching, and choosing courses at Northeastern!</p> -->
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-4 col-md-4">
+            <div class="panel panel-default schedule-panel">
+                <div class="panel-heading"><i class="fa fa-star"></i>Favorited Courses</div>
                 <div class="panel-body">
                     <div class="list-group">
+                        <!-- <a href="#" class="list-group-item">Course</a>
                         <a href="#" class="list-group-item">Course</a>
-                        <a href="#" class="list-group-item">Course</a>
-                        <a href="#" class="list-group-item">Course</a>
-                        <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a>-->
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-4">
+    </div>
+
+    <div class="row">
+        <div class="col-lg-6 col-md-6">
             <div class="panel panel-default schedule-panel">
-                <div class="panel-heading"><i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;In Progress</div>
+                <div class="panel-heading"><i class="fa fa-graduation-cap"></i>Completed</div>
                 <div class="panel-body">
                     <div class="list-group">
+                        <!-- <a href="#" class="list-group-item">Course</a>
                         <a href="#" class="list-group-item">Course</a>
                         <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-md-6">
+            <div class="panel panel-default schedule-panel">
+                <div class="panel-heading"><i class="fa fa-book"></i>In Progress</div>
+                <div class="panel-body">
+                    <div class="list-group">
+                        <!-- <a href="#" class="list-group-item">Course</a>
                         <a href="#" class="list-group-item">Course</a>
                         <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a> -->
                     </div>
                 </div>
             </div>
