--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -5,25 +5,25 @@
 
             <div class="action-buttons">
                 <button ng-click="model.favoriteCourse(model.data)" class="btn btn-default">
-                    <span ng-show="model.data.likes.indexOf(currentUser._id) > -1"><i class="fa fa-star"></i>Favorited</span>
-                    <span ng-show="!model.data.likes || model.data.likes.indexOf(currentUser._id) == -1"><i class="fa fa-star-o"></i>Favorite</span>
+                    <span ng-show="model.data.likes.indexOf(currentUser._id) > -1"><i class="fa fa-star"></i><span class="button-span">Favorited</span></span>
+                    <span ng-show="!model.data.likes || model.data.likes.indexOf(currentUser._id) == -1"><i class="fa fa-star-o"></i><span class="button-span">Favorite</span></span>
                     <!-- <span ng-show="model.like" class="fa fa-star"></span> -->
                     <!-- <span ng-show="!model.like" class="fa fa-star-o"></span> -->
                     <!-- <span>Save</span> -->
                 </button>
 
-                <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default editCourseButton" data-toggle="modal" data-target="#editCourse"><i class="fa fa-pencil"></i><span>Edit</span></button>
+                <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default editCourseButton" data-toggle="modal" data-target="#editCourse"><i class="fa fa-pencil"></i><span class="button-span">Edit</span></button>
 
-                <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-danger deleteCourseButton" data-toggle="modal" data-target="#deleteCourse"><i class="fa fa-trash-o"></i><span>Delete</span></button>
+                <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-danger deleteCourseButton" data-toggle="modal" data-target="#deleteCourse"><i class="fa fa-trash-o"></i><span class="button-span">Delete</span></button>
             </div>
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
             <!-- {{currentUser}} -->
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-2 detail-label">Course ID:</div>
                 <div class="col-md-10 detail-info">{{model.data._id}}</div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-md-2 detail-label">Subject:</div>
                 <div class="col-md-10 detail-info">{{model.data.subject}}</div>
