--- a/public/project/client/views/login/login.view.html
+++ b/public/project/client/views/login/login.view.html
@@ -1,6 +1,6 @@
 <div ng-controller="LoginController" class="container-fluid">
     <div class="row">
-        <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 main">
+        <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 main login">
             <h1>Login</h1>
             <div ng-show="message" class="alert alert-danger" role="alert">{{message}}</div>
             <form class="form-horizontal">
@@ -24,7 +24,7 @@
                         <div class="register-link">Don't have an account?  <a href="#/register">Register here</a>!</div>
                     </div>
                 </div>
-                <hr>
+                <!-- <hr>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-4">
                         <a href="/auth/google" class="btn btn-block login-google">
@@ -36,7 +36,7 @@
                             <i class="fa fa-facebook-official"></i>&nbsp;&nbsp;Log in with Facebook
                         </a>
                     </div>
-                </div>
+                </div> -->
 
             </form>
         </div>
