--- a/public/project/client/views/login/login.view.html
+++ b/public/project/client/views/login/login.view.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group login-row">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button ng-click="model.login(model.user)" type="submit" class="btn btn-default btn-md">Login</button>
                         <div class="register-link">Don't have an account?  <a href="#/register">Register here</a>!</div>
