--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -400,7 +400,9 @@ select.form-control {
 }
 
 /****************** LOGIN PAGE ****************/
-
+.login .login-row {
+    margin-top: 40px;
+}
 .login .register-link {
     color: #555;
     /*margin-top: 40px;*/
