--- a/public/project/client/views/favorited/favorited.view.html
+++ b/public/project/client/views/favorited/favorited.view.html
@@ -1,7 +1,7 @@
 <div ng-controller="FavoritedController" class="container-fluid">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main favorited">
-            <h1>Favorited Courses</h1>
+            <h1>Favorited Courses</h1> {{currentUser.likes}}
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
                     <tr>
