--- a/public/project/client/views/profile/profile.view.html
+++ b/public/project/client/views/profile/profile.view.html
@@ -44,12 +44,12 @@
                         <input ng-model="currentUser.nuid" type="text" class="form-control" id="" placeholder="000000000">
                     </div>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="" class="col-sm-3 control-label">Role:</label>
                     <div class="col-sm-9">
                         <input ng-model="currentUser.roles" type="text" class="form-control" id="" placeholder="Role">
                     </div>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <div class="col-sm-6 pull-right">
                         <button ng-click="model.remove(currentUser)" type="submit" class="btn btn-danger btn-md">Delete My Account</button>
